added tabs and schedule tab content

--- a/i18n/en/strings.xml
+++ b/i18n/en/strings.xml
@@ -4,4 +4,7 @@
 	<string name = "tab2_title">Venue</string>
 	<string name = "tab3_title">Conversation</string>
 	<string name = "tab4_title">Videos</string>
+	<string name="day1_caption">Day 1</string>
+	<string name="day2_caption">Day 2</string>
+	<string name="day3_caption">Day 3</string>	
 </resources>
